--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LR - Lobo Recorder - Perfect for Podcast</title>
 </head>
-<body style="margin:0 auto;text-align: center;">
+<body style="margin:0 auto;text-align: center;font-family: monospace;font-size:1.2em;">
     <h3>Lobo Recorder</h3>
     <p><button id="start">start</button><button id="stop">stop</button><button id="pause">pause</button><button id="resume">resume</button></p>
     <div id="status">Idle</div>
+    <div id="timer">--</div>
     <figure id="player"></figure>
-    <script src="app.js?v2.0"></script>
+    <script src="app.js?v2.1"></script>
 </body>
 </html>
