--- a/tekken/index.html
+++ b/tekken/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="design.css">
-<title>tekken</title>
+<title>Combo</title>
 </head>
 <body style="text-align:center;margin:0 auto;padding:0;border:none;">
-<h2>Tekken Combo Saver</h2>
+<p><button id="delete" style="margin:15px;padding:15px;background-color: #445566;color:#ffffff;border:3px solid #000000;outline:none;font-size:1.3em;">Delete</button></p>
 <div style="border:1px solid #333333;padding:5px;margin:15px;background-color:#cccccc;text-align:center;">
 <img src="img/1.svg" id="1" class="image">
 <img src="img/2.svg" id="2" class="image">
@@ -27,6 +29,6 @@
 <img src="img/follow.svg" id="follow" class="image">
 </div>
 <p><div id="text"></div></p>
-<script src="app.js"></script>
+<script src="app.js?version=1.0"></script>
 </body>
 </html>
