--- a/tekken/index.html
+++ b/tekken/index.html
@@ -1,8 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="design.css">
+<link rel="stylesheet" href="design.css?version=2.0">
 <title>Combo</title>
 </head>
 <body style="text-align:center;margin:0 auto;padding:0;border:none;">
@@ -28,7 +29,7 @@
 <img src="img/ub.svg" id="ub" class="image">
 <img src="img/follow.svg" id="follow" class="image">
 </div>
-<p><div id="text"></div></p>
-<script src="app.js?version=1.0"></script>
+<div id="text"></div>
+<script src="app.js?version=2.0"></script>
 </body>
 </html>
