--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LR - Lobo Recorder - Perfect for Podcast</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="design.css?version=2.2">
+<title>Combo</title>
 </head>
-<body style="margin:0 auto;text-align: center;font-family: monospace;font-size:1.2em;">
-    <h3>Lobo Recorder</h3>
-    <p><button id="start">start</button><button id="stop">stop</button><button id="pause">pause</button><button id="resume">resume</button></p>
-    <div id="status">Idle</div>
-    <div id="timer">--</div>
-    <figure id="player"></figure>
-    <script src="app.js?v2.1"></script>
+<body style="text-align:center;margin:0 auto;padding:0;border:none;background-color: #444444;">
+<p><button id="delete" style="margin:15px;padding:15px;background-color: #445566;color:#ffffff;border:3px solid #000000;outline:none;font-size:1.3em;">Delete</button></p>
+<div>
+<img src="img/1.png" id="1" class="image">
+<img src="img/2.png" id="2" class="image">
+<img src="img/3.png" id="3" class="image">
+<img src="img/4.png" id="4" class="image">
+<img src="img/12.png" id="12" class="image">
+<img src="img/34.png" id="34" class="image">
+<img src="img/24.png" id="24" class="image">
+<img src="img/13.png" id="13" class="image">
+<img src="img/14.png" id="14" class="image">
+<img src="img/23.png" id="23" class="image">
+<img src="img/b.png" id="b" class="image">
+<img src="img/d.png" id="d" class="image">
+<img src="img/f.png" id="f" class="image">
+<img src="img/u.png" id="u" class="image">
+<img src="img/db.png" id="db" class="image">
+<img src="img/df.png" id="df" class="image">
+<img src="img/uf.png" id="uf" class="image">
+<img src="img/ub.png" id="ub" class="image">
+<img src="img/arrow.png" id="arrow" class="image">
+<img src="img/run.png" id="run" class="image">
+</div>
+<div id="text"></div>
+<script src="app.js?version=2.2"></script>
 </body>
 </html>
