--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="design.css?version=2.2">
+<link rel="stylesheet" href="design.css?version=2.3">
 <title>Combo</title>
 </head>
-<body style="text-align:center;margin:0 auto;padding:0;border:none;background-color: #444444;">
-<p><button id="delete" style="margin:15px;padding:15px;background-color: #445566;color:#ffffff;border:3px solid #000000;outline:none;font-size:1.3em;">Delete</button></p>
+<body>
+<p><button id="delete">Clear</button></p>
 <div>
 <img src="img/1.png" id="1" class="image">
 <img src="img/2.png" id="2" class="image">
@@ -31,6 +31,6 @@
 <img src="img/run.png" id="run" class="image">
 </div>
 <div id="text"></div>
-<script src="app.js?version=2.2"></script>
+<script src="app.js?version=2.3"></script>
 </body>
 </html>
