--- a/index.html
+++ b/index.html
@@ -3,34 +3,41 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="design.css?version=2.3">
+<link rel="stylesheet" href="design.css?version=2.4">
 <title>Combo</title>
 </head>
 <body>
-<p><button id="delete">Clear</button></p>
-<div>
-<img src="img/1.png" id="1" class="image">
-<img src="img/2.png" id="2" class="image">
-<img src="img/3.png" id="3" class="image">
-<img src="img/4.png" id="4" class="image">
-<img src="img/12.png" id="12" class="image">
-<img src="img/34.png" id="34" class="image">
-<img src="img/24.png" id="24" class="image">
-<img src="img/13.png" id="13" class="image">
-<img src="img/14.png" id="14" class="image">
-<img src="img/23.png" id="23" class="image">
-<img src="img/b.png" id="b" class="image">
-<img src="img/d.png" id="d" class="image">
-<img src="img/f.png" id="f" class="image">
-<img src="img/u.png" id="u" class="image">
-<img src="img/db.png" id="db" class="image">
-<img src="img/df.png" id="df" class="image">
-<img src="img/uf.png" id="uf" class="image">
-<img src="img/ub.png" id="ub" class="image">
-<img src="img/arrow.png" id="arrow" class="image">
-<img src="img/run.png" id="run" class="image">
-</div>
-<div id="text"></div>
-<script src="app.js?version=2.3"></script>
+    <div id="top">
+        <button id="delete" class="btn">CLEAR</button>
+        <button id="save" class="btn" disabled>SAVE</button>
+    </div>
+    <div id="main">
+        <div id="a">
+            <img src="img/1.png" id="1" class="image">
+            <img src="img/2.png" id="2" class="image">
+            <img src="img/3.png" id="3" class="image">
+            <img src="img/4.png" id="4" class="image">
+            <img src="img/12.png" id="12" class="image">
+            <img src="img/34.png" id="34" class="image">
+            <img src="img/24.png" id="24" class="image">
+            <img src="img/13.png" id="13" class="image">
+            <img src="img/14.png" id="14" class="image">
+            <img src="img/23.png" id="23" class="image">
+            <img src="img/b.png" id="b" class="image">
+            <img src="img/d.png" id="d" class="image">
+            <img src="img/f.png" id="f" class="image">
+            <img src="img/u.png" id="u" class="image">
+            <img src="img/db.png" id="db" class="image">
+            <img src="img/df.png" id="df" class="image">
+            <img src="img/uf.png" id="uf" class="image">
+            <img src="img/ub.png" id="ub" class="image">
+            <img src="img/arrow.png" id="arrow" class="image">
+            <img src="img/run.png" id="run" class="image">
+        </div>
+        <div id="b">
+            <div id="text"></div>
+        </div>
+    </div>
+    <script src="app.js?version=2.4"></script>
 </body>
 </html>
