--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="design.css?version=2.4">
+<link rel="stylesheet" href="design.css?version=2.5">
 <title>Combo</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <button id="save" class="btn" disabled>SAVE</button>
     </div>
     <div id="main">
-        <div id="a">
+        <div id="amain">
             <img src="img/1.png" id="1" class="image">
             <img src="img/2.png" id="2" class="image">
             <img src="img/3.png" id="3" class="image">
@@ -34,10 +34,10 @@
             <img src="img/arrow.png" id="arrow" class="image">
             <img src="img/run.png" id="run" class="image">
         </div>
-        <div id="b">
+        <div id="bmain">
             <div id="text"></div>
         </div>
     </div>
-    <script src="app.js?version=2.4"></script>
+    <script src="app.js?version=2.5"></script>
 </body>
 </html>
