--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div id="text"></div>
         </div>
     </div>
+    <p><a href="workGame/">cakeGame</a></p>
     <script src="app.js?version=2.5"></script>
 </body>
 </html>
