--- a/workGame/index.html
+++ b/workGame/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css?v=290520242158">
+    <link rel="stylesheet" href="styles.css?v=1234">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BETA</title>
@@ -12,12 +12,12 @@
         <h3><span id="divEarnings"></span></h3>
         <p><span id="divPrice"></span> <button id="btnLower">-</button> <button id="btnRaise">+</button></p>
         <p><span id="divGoods"></span></p>
+        <p><span id="divBuyers"></span></p>
         <p><span id="divWorkers"></span> <button id="btnWorker">+</button></p>
         <p><span id="divDemands"></span></p>
-        <p><span id="divBuyers"></span></p>
         <p><span id="divTotal"></span></p>
     </div>
     <p><button id="btnReset">FactoryReset</button></p>
-    <script src="engine.js?v=290520242158"></script>
+    <script src="engine.js?v=1234"></script>
 </body>
 </html>
