--- a/geo/index.html
+++ b/geo/index.html
@@ -3,7 +3,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>GEO</title>
+     <title>GEO-LOBO</title>
      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
@@ -14,7 +14,8 @@
      crossorigin=""></script>
 
      <style>
-          #map { height:380px; }
+          body { background-color: #000000; padding:0px; margin:0 auto;}
+          #map { height:100vh; }
      </style>
 </head>
 <body>
