--- a/geo/index.html
+++ b/geo/index.html
@@ -23,7 +23,7 @@
 </body>
 <script>
      //Coded by LoboSSL 2024
-     var map = L.map('map').setView([51.505, -0.09], 13);
+     var map = L.map('map').setView([51.505, -0.09], 1); //13
 
      L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 19,
@@ -58,7 +58,7 @@ function success(pos){
           zoom = map.fitBounds(circle.getBounds());
      }
 
-     map.setView([lat, lng]);
+     map.setView([lat, lng],1);
 }
 
 function error(err){
