--- a/geo/index.html
+++ b/geo/index.html
@@ -23,7 +23,7 @@
 </body>
 <script>
      //Coded by LoboSSL 2024
-     var map = L.map('map').setView([51.505, -0.09], 1); //13
+     var map = L.map('map').setView([51.505, -0.09], 1);
 
      L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 19,
@@ -43,8 +43,8 @@ let marker, cricle, zoom;
 function success(pos){
      const lat = pos.coords.latitude;
      const lng = pos.coords.longitude;
-     const accuracy = 1; //1 meter
-     //const accuracy = pos.coords.accuracy;
+     //const accuracy = 1; //1 meter
+     const accuracy = pos.coords.accuracy;
 
      if(marker){
           map.removeLayer(marker);
@@ -58,7 +58,7 @@ function success(pos){
           zoom = map.fitBounds(circle.getBounds());
      }
 
-     map.setView([lat, lng],1);
+     map.setView([lat, lng]);
 }
 
 function error(err){
