--- a/geo/index.html
+++ b/geo/index.html
@@ -26,7 +26,7 @@
      var map = L.map('map').setView([51.505, -0.09], 6);
 
      L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 19,
+    maxZoom: 1, //19
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 }).addTo(map);
 
