--- a/geo/index.html
+++ b/geo/index.html
@@ -23,10 +23,10 @@
 </body>
 <script>
      //Coded by LoboSSL 2024
-     var map = L.map('map').setView([51.505, -0.09], 6);
+     var map = L.map('map').setView([59.8954, 10.7985], 13);
 
      L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 1, //19
+    maxZoom: 19,
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 }).addTo(map);
 
