--- a/geo/index.html
+++ b/geo/index.html
@@ -22,19 +22,22 @@
      <div id="map"></div>
 </body>
 <script>
-     //Coded by LoboSSL 2024
-     let a = null;
-     let b = null;
-     let accuracy = 1;
-     
+//Coded by LoboSSL 2024
+let a = false;
+let b = false;
+let accuracy = 1;
+
+if(a && b){
      var map = L.map('map').setView([a, b], 13);
 
      L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 19,
-    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-}).addTo(map);
+          maxZoom: 19,
+          attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+     }).addTo(map);
+}
 
 if(!navigator.geolocation){
+     alert("Error, your system does not allow geolocation.");
 }
 else{
      setInterval(() =>{
