--- a/geo/index.html
+++ b/geo/index.html
@@ -60,7 +60,7 @@ function success(pos){
           zoom = map.fitBounds(circle.getBounds());
      }
 
-     map.setView([a, b]);
+     //map.setView([a, b]);
 }
 
 function error(err){
