--- a/geo/index.html
+++ b/geo/index.html
@@ -22,16 +22,23 @@
      <div id="map"></div>
 </body>
 <script>
-//edit by LoboSSL
+//edit by LoboSSL 01.06.2024
 let a = false;
 let b = false;
 let accuracy = 1;
 let map = false;
 let marker, cricle, zoom;
+
+map = L.map('map').setView([49, 156], 0);
+
+L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+     maxZoom: 19,
+     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+}).addTo(map);
      
 setInterval(() =>{
      navigator.geolocation.getCurrentPosition(success, error);
-},500);
+},3000);
 
 if(!navigator.geolocation){
      alert("Error, your system does not allow geolocation.");
@@ -40,13 +47,6 @@ if(!navigator.geolocation){
 function success(pos){
      a = pos.coords.latitude;
      b = pos.coords.longitude;
-
-     map = L.map('map').setView([a, b], 13);
-     
-     L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-          maxZoom: 19,
-          attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-     }).addTo(map);
 
      if(marker){
           map.removeLayer(marker);
