--- a/geo/index.html
+++ b/geo/index.html
@@ -15,8 +15,8 @@
 
      <style>
           body { background-color: #000000; padding:0px; margin:0 auto;}
-          #updateText { position:absolute; top:0px; border-bottom:2px solid #440000; background-color: #222222; color:#eeeeee; text-align: center; font-size:1.2em; }
-          #map { height:100vh; }
+          #updateText { position:absolute; top:0px; border-bottom:2px solid #440000; background-color: #222222; color:#eeeeee; text-align: center; font-size:1.2em; height:10vh; }
+          #map { height:90vh; }
      </style>
 </head>
 <body>
