--- a/geo/index.html
+++ b/geo/index.html
@@ -38,10 +38,12 @@ L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
      maxZoom: 19,
      attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 }).addTo(map);
-     
+
+updateText.innerText = "Loading, please wait..";
+
 setInterval(() =>{
      navigator.geolocation.getCurrentPosition(success, error);
-},100);
+},3000);
 
 if(!navigator.geolocation){
      updateText.innerText = "Error, your system does not allow geolocation.";
