--- a/geo/index.html
+++ b/geo/index.html
@@ -35,12 +35,10 @@ L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
      attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 }).addTo(map);
 
-setInterval(() =>{
-     navigator.geolocation.getCurrentPosition(success, error);
-},1000);
+navigator.geolocation.watchPosition(success,error);
 
 if(!navigator.geolocation){
-     alert("1")
+     alert("your system does not have geolocation installed")
 }
 
 function success(pos){
