--- a/geo/index.html
+++ b/geo/index.html
@@ -44,6 +44,7 @@ if(!navigator.geolocation){
 }
 
 function success(pos){
+     console.log("update:",pos);
      a = pos.coords.latitude;
      b = pos.coords.longitude;
 
