--- a/geo/index.html
+++ b/geo/index.html
@@ -15,11 +15,12 @@
 
      <style>
           #map { height:100vh; }
+          #move { position: absolute; bottom:0px; left:0px; right:0px; background-color:#ff0000; color:#ffffff; font-size: 1.2em; text-align:center; }
      </style>
 </head>
 <body>
+     <div id="map"></div>
      <div id="move"></div>
-     <div id="map"></div>>
 </body>
 <script>
 //edit by LoboSSL 01.06.2024
