--- a/geo/index.html
+++ b/geo/index.html
@@ -14,13 +14,14 @@
      crossorigin=""></script>
 
      <style>
-          #map { height:100vh; }
+          body { padding:0; margin:0 auto; background-color: #000000; }
+          #map { height:100vh; } /* 90 hvis det ikke funker */
           #move { position: absolute; bottom:0px; left:0px; right:0px; background-color:#ff0000; color:#ffffff; font-size: 1.2em; text-align:center; }
      </style>
 </head>
 <body>
-     <div id="map"></div>
      <div id="move"></div>
+     <div id="map"></div>
 </body>
 <script>
 //edit by LoboSSL 01.06.2024
