--- a/geo/index.html
+++ b/geo/index.html
@@ -15,8 +15,8 @@
 
      <style>
           body { padding:0; margin:0 auto; background-color: #000000; }
-          #map { height:90vh; } /* 90 hvis det ikke funker */
-          #move { position: absolute; bottom:0px; left:0px; right:0px; background-color:#ff0000; color:#ffffff; font-size: 1.2em; text-align:center; }
+          #map { height:90vh; }
+          #move { position: absolute; bottom:0px; left:0px; right:0px; background-color:#ff0000; color:#ffffff; font-size: 1.3em; text-align:center; height:10vh; }
      </style>
 </head>
 <body>
