--- a/geo/index.html
+++ b/geo/index.html
@@ -16,7 +16,7 @@
      <style>
           body { padding:0; margin:0 auto; background-color: #000000; }
           #map { height:90vh; }
-          #move { position: absolute; bottom:0px; left:0px; right:0px; background-color:#ff0000; color:#ffffff; font-size: 1.3em; text-align:center; height:10vh; }
+          #move { position: absolute; bottom:0px; left:0px; right:0px; background-color:#ff0000; color:green; font-size: 1.3em; text-align:center; height:10vh; }
      </style>
 </head>
 <body>
