--- a/geo/index.html
+++ b/geo/index.html
@@ -15,13 +15,16 @@
 
      <style>
           body { padding:0; margin:0 auto; background-color: #000000; }
-          #map { height:90vh; }
-          #move { position: absolute; bottom:0px; left:0px; right:0px; background-color:#ff0000; color:green; font-size: 1.3em; text-align:center; height:10vh; }
+          #flex { display: flex; }
+          #map { height:90vh; flex:2; }
+          #move { background-color:green; color:white; font-size: 1.3em; text-align:center; flex:1; }
      </style>
 </head>
 <body>
-     <div id="move"></div>
-     <div id="map"></div>
+     <div id="box">
+          <div id="map"></div>
+          <div id="move"></div>
+     </div>
 </body>
 <script>
 //edit by LoboSSL 01.06.2024
