--- a/geo/index.html
+++ b/geo/index.html
@@ -14,7 +14,7 @@
      crossorigin=""></script>
 
      <style>
-          body { padding:0; margin:0 auto; background-color: #000000; }
+          body { padding:0; margin:0 auto; background-color: green; }
           #flex { display: flex; }
           #map { height:90vh; flex:2; }
           #move { background-color:green; color:white; font-size: 1.3em; text-align:center; flex:1; }
@@ -70,7 +70,7 @@ function success(pos){
           zoom = map.fitBounds(circle.getBounds());
      }
 
-     move.innerText = "You are moving:" + a + "," + b;
+     move.innerText = a + "," + b;
 
      map.setView([a, b]);
 }
