--- a/geo/index.html
+++ b/geo/index.html
@@ -7,11 +7,17 @@
      <link rel="stylesheet" href="leaflet.css?v1.0" />
      <script src="leaflet-src.js?v1.0"></script>
      <style>
-          #map { height: 50vh; }
+          body { margin:0 auto; padding:0; font-family: monospace; }
+          #flex { display: flex; flex-direction: column;}
+          #map { height:50vh; }
+          #test { flex:1 100%; text-align: center; font-size:1.3em; }
      </style>
 </head>
 <body>
-     <div id="map"></div>
+     <div id="flex">
+          <div id="map"></div>
+          <div id="test"></div>
+     </div>
 </body>
 <script>
      let map = null
@@ -45,6 +51,8 @@
           let latitude = event.coords.latitude
           let longitude = event.coords.longitude
           let accuracy = event.coords.accuracy
+
+          document.getElementById("test").innerText = "latitude:" + latitude + "\nlongitude:" + longitude + "\naccuracy:" + accuracy
 
           if(marker){
                map.removeLayer(marker)
