--- a/geo/index.html
+++ b/geo/index.html
@@ -3,14 +3,14 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>abc</title>
+     <title>LoboGeo</title>
      <link rel="stylesheet" href="leaflet.css?v1.0" />
      <script src="leaflet-src.js?v1.0"></script>
      <style>
-          body { margin:0 auto; padding:0; font-family: monospace; }
+          body { margin:0 auto; padding:0; font-family: monospace; background-color: #eeeeee; }
           #flex { display: flex; flex-direction: column;}
           #map { height:80vh; }
-          #text { flex:1 100%; text-align: center; font-size:1.0em; }
+          #text { flex:1 100%; text-align: center; font-size:1.0em; padding: 15px; }
      </style>
 </head>
 <body>
@@ -60,7 +60,7 @@
           }
 
           marker = L.marker([latitude, longitude]).addTo(map)
-          circle = L.circle([latitude, longitude],{ radius: 10 }).addTo(map)
+          circle = L.circle([latitude, longitude],{ radius: accuracy }).addTo(map)
 
           if(!zoom){
                zoom = map.fitBounds(circle.getBounds())
