--- a/geo/index.html
+++ b/geo/index.html
@@ -115,13 +115,11 @@
 
      window.onload = () =>
      {
-          navigator.geolocation.getCurrentPosition(success, error, options)
-          /*window.setInterval(() => {
+          window.setInterval(() => {
                if(navigator.geolocation){
                     navigator.geolocation.getCurrentPosition(success, error, options)
                }
           },1000)
-          */
      }
 </script>
 </html>
