--- a/geo/index.html
+++ b/geo/index.html
@@ -17,7 +17,7 @@
      <div id="flex">
           <div id="map"></div>
           <div id="text"></div>
-          <p><button id="Pause">Pause</button></p>
+          <p><button id="pause">Pause</button></p>
      </div>
 </body>
 <script>
