--- a/geo/index.html
+++ b/geo/index.html
@@ -13,7 +13,7 @@
           #text { flex:1 100%; text-align: center; font-size:1.0em; padding: 15px; }
      </style>
 </head>
-<body>
+<body style="text-align:center; margin:0 auto; padding:0;font-family:monospace;font-size:1.2em;">
      <div id="flex">
           <div id="map"></div>
           <div id="text"></div>
@@ -113,9 +113,11 @@
      document.getElementById("pause").addEventListener("click",() =>{
           if(pause){
                pause = false
+               document.getElementById("pause").innerText = "Pause"
           }
           else{
                pause = true
+               document.getElementById("pause").innerText = "Resume"
           }
      })
 
