--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
-<h3>https://lobossl.github.io/</h3>
-<h2>My Projects</h2>
-<a href="geo/">geo</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LifeGame</title>
+</head>
+<body style="margin: 0 auto;text-align: center;padding: 0;border: none;margin: 0;color: #000000;">
+    <pre style="color:#CCCCCC;">LifeGame v1.0.0</pre>
+    <div style="width: 75%;font-size: 1.5em;background-color: #eeeeee;color: #000000;margin: 0 auto;border: 1px solid #cccccc;border-radius: 6px;">
+        <div style="margin: 5px;"><img src='img/strength.png' alt='STRENGTH' />:<span id="strength">0</span></div>
+        <div style="margin: 5px;"><img src='img/intelligence.png' alt='INTELLIGENCE' />:<span id="intelligence">0</span></div>
+        <div style="margin: 5px;"><img src='img/dexterity.png' alt='DEXTERITY' />:<span id="dexterity">0</span></div>
+        <div style="margin: 5px;"><img src='img/xp.png' alt='XP' />:<span id="xp">0</span></div>
+        <div style="margin: 5px;"><img src='img/gold.png' alt='GOLD' />:<span id="gold">0</span></div>
+    </div>
+    <div style="text-align: center;padding: 5px;margin: 5px;">
+        <button id="btn_add" style="padding: 15px;font-size: 1em;outline: none;border: 3px solid #000000;background-color: #0c961e;color: #ffffff;cursor: pointer;border-radius: 6px;">Ready</button>
+    </div>
+    <h3 id="countQuests"></h3>
+    <div id="table" style="text-align: center;padding: 5px;margin: 5px;word-break: break-word;display: flex;justify-content: center;flex-wrap: wrap;"></div>
+    <script src="index.js?v=1.0000"></script>
+</body>
+</html>
